# Netra

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_FIX.md  Dockerfile  LICENSE  Makefile  NETRA_v1_QUICKSTART.md  PHASE4_100_PERCENT_COMPLETE.md  PHASE4_IMPLEMENTATION.md  README.md  SECURITY.md  SECURITY_FIXES.md  SUPPORT.md  alembic.ini  config.yaml  docker-compose.prod.yml  docker-compose.yml  install.sh  netra.py  pyproject.toml  requirements.txt  verifier_allowlist.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v1.0.0.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation-improvement.md  feature_request.md  security-vulnerability.md
.github/skills/security-architect/: SKILL.md
.github/workflows/: ci.yml  netra-reusable.yml  netra-scan.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_phase2_coverage.py  003_phase4_auth_integrations.py  004_bugbounty_module.py  005_pgvector_extension.py  006_bugbounty_gui.py  007_scan_user_id.py  008_agentic_capabilities.py  009_corpus_tables.py  010_corpus_embedding_versions.py  011_corpus_pgvector_columns.py
data/: vuln_class_priors.yaml
docker/: Dockerfile  Dockerfile.worker
docker/nginx/: default.conf
docs/: BENCHMARKS.md  FAQ.md  GITHUB_UPDATE_INSTRUCTIONS.md  NETRA_BB_Architecture.docx  NETRA_BB_GUI_PRD.docx  NETRA_BB_PRD.docx  PRD.md  REPO_TOPICS.md  ROADMAP.md  SAMPLE_REPORTS.md  USE_CASES.md  agent.md  api.md  bugbounty.md  cicd.md  compliance.md  configuration.md  copy-curl-complete.md  dashboard.md  favicon-feature-complete.md  index.md  installation.md  keyboard-shortcuts.md  mkdocs.yml  profiles.md  quickstart.md  rbac-phase-2-1-complete.md  reports.md  scan-comparison-complete.md
docs/assets/: README.md
docs/diagrams/: bb_graphify.mmd  bb_lifecycle.mmd  bb_mcp_federation.mmd
docs/samples/: README.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts  routeTree.gen.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  bugbounty.ts  client.ts  compliance.ts  findings.ts  reports.ts  scans.ts  settings.ts  targets.ts
frontend/src/hooks/: useFaviconStatus.ts  useKeyboardShortcuts.ts  useWebSocket.ts
frontend/src/pages/: AttackGraph.tsx  Compliance.tsx  Dashboard.tsx  FindingDetail.tsx  FindingsList.tsx  Login.tsx  Reports.tsx  ScanCompare.tsx  ScanDetail.tsx  ScansList.tsx  Settings.tsx  Targets.tsx  Users.tsx
frontend/src/stores/: authStore.ts  authStore.tsx
frontend/src/types/: findings.ts  index.ts
frontend/src/utils/: formatters.ts
frontend/tests/e2e/: bb-console.spec.ts
go_engine/: Makefile  go.mod
go_engine/cmd/dirfuzz/: main.go
go_engine/cmd/portscan/: main.go
go_engine/cmd/probe/: main.go
go_engine/cmd/resolve/: main.go
netra/: __init__.py  __main__.py
netra/ai_brain/: __init__.py  analyzer.py  attack_chain.py  config_audit.py  consensus.py  narrative.py  personas.py
netra/core/: checkpoint.py  config.py  database.py  deps.py  notify.py  utils.py
netra/mcp/: __init__.py  server.py  tools.py
netra/modules/vapt/: __init__.py  api_testing.py  auth_testing.py  cloud.py  cloud_detect.py  discovery.py  extractor.py  injection.py  js_analysis.py  misconfig.py  network.py  osint.py  payloads.py  ports.py  screenshots.py  subdomains.py  vulns.py  (+1 more)
netra/reports/: __init__.py  compliance_report.py  evidence_zip.py  excel_report.py  html_report.py  pdf_report.py  word_report.py
netra/tui/: __init__.py
scripts/: seed_db.py
src/netra/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_models.py  test_phase1.py  test_phase4.py
tests/contract/: test_bugbounty_openapi.py
tests/test_ai/: test_brain.py  test_prompts.py
tests/test_api/: test_findings.py  test_health.py  test_scans.py  test_targets.py
tests/test_bugbounty/: test_agentic.py  test_agentic_orchestrator.py  test_api_hunts.py  test_cli_doctor.py  test_cli_scope_sync.py  test_enrich.py  test_evidence_redactor.py  test_learning_embeddings.py  test_learning_fetcher.py  test_learning_search.py  test_learning_sources.py  test_learning_trends.py  test_process_control.py  test_recon_passive.py  test_scope.py  test_submission_poc.py  test_worker_tasks.py
tests/test_integrations/: test_hackerone.py
tests/test_mcp/: test_federated.py  test_server.py
tests/test_scanner/: test_tools.py
tests/test_services/: test_scan_service.py
(+191 files in other folders)
