[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "netra"
version         = "1.0.0"
description     = "NETRA नेत्र — AI-Augmented Cybersecurity Platform"
readme          = "README.md"
license         = { text = "AGPL-3.0" }
authors         = [{ name = "Yash Wardhan Gautam", email = "yash@netra.security" }]
requires-python = ">=3.11"
keywords        = ["security", "vapt", "pentest", "ai", "mcp", "cybersecurity"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "anthropic>=0.40.0",
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "python-docx>=1.1.0",
    "reportlab>=4.1.0",
    "openpyxl>=3.1.2",
    "jinja2>=3.1.4",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "dnspython>=2.6.1",
    "python-whois>=0.9.4",
    "slack-sdk>=3.27.0",
    "anyio>=4.3.0",
    "asyncio-throttle>=1.0.2",
]

[project.optional-dependencies]
dev  = ["pytest>=8.1.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0",
        "black>=24.3.0", "ruff>=0.4.0", "mypy>=1.9.0"]
full = ["shodan>=1.31.0", "censys>=2.2.9", "pycryptodome>=3.20.0",
        "python-jose>=3.3.0"]

[project.scripts]
netra = "netra.__main__:main"

[project.urls]
Homepage   = "https://github.com/netra-security/netra"
Repository = "https://github.com/netra-security/netra"
Issues     = "https://github.com/netra-security/netra/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["netra*"]

[tool.black]
line-length    = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select      = ["E", "F", "I", "N", "UP", "B"]
ignore      = ["E501", "B008"]

[tool.mypy]
python_version      = "3.11"
strict              = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
